# EasyTask

./: .env  pyproject.toml
EasyTask/: manage.py
EasyTask/EasyTask/: asgi.py  settings.py  urls.py  wsgi.py
EasyTask/UserAuth/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
